macros/tests/expand/fail/arg0_invalid_keyed.rs
fn main() {
    openraft_macros::expand!(
        !FOO,
        (K, T, V) => {K; T; V;},
    );

    openraft_macros::expand!(
        FOO,
        (K, T, V) => {K; T; V;},
    );
}
